# netrunner-pairings

./: Cargo.toml  README.md
src/: lib.rs  pairing.rs  player.rs  round.rs  single_swiss.rs  swiss.rs
