[package]
name = "netrunner-pairings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.2", features = ["v4"] }
